--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0-alpha1'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.blankj:utilcode:1.28.0'
     testImplementation 'junit:junit:4.12'
