--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,9 @@
 buildscript {
     
     repositories {
+        maven {
+            url'http://maven.aliyun.com/nexus/content/groups/public/'
+        }
         mavenCentral()
         google()
         jcenter()
@@ -10,7 +13,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.6.1'
-        
+        classpath "io.realm:realm-gradle-plugin:6.0.2"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -19,6 +22,9 @@ buildscript {
 
 allprojects {
     repositories {
+        maven {
+            url'http://maven.aliyun.com/nexus/content/groups/public/'
+        }
         mavenCentral()
         google()
         jcenter()
