--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,13 +5,14 @@
     <uses-permission android:name="android.permission.INTERNET" /> <!-- Android 9.0 前台权限 -->
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
+    <!--android:roundIcon="@mipmap/ic_launcher_round"-->
     <application
         android:name=".MainApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/nil_logo"
         android:label="@string/app_name"
         android:networkSecurityConfig="@xml/network_security_config"
-        android:roundIcon="@mipmap/ic_launcher_round"
+
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".activities.PlayMusicActivity"></activity>
